@@ -2,8 +2,9 @@ Description: Update the installation directories.
   Do several path fixups, removing unneeded @prefix@s and changing
   binaries install location from sbin to bin, to comply with the FHS
 Forwarded: not-needed
-Author: Paolo Molaro <lupus@debian.org>, Julien Lemoine <speedblue@debian.org>,
-  Luis Rodrigo Gallardo Cruz <rodrigo@debian.org>
+Author: Paolo Molaro <lupus@debian.org>
+Author: Julien Lemoine <speedblue@debian.org>
+Author: Luis Rodrigo Gallardo Cruz <rodrigo@debian.org>
 Last-Update: 2014-06-10
 
 --- a/tools/stunnel.conf-sample.in
