@@ -1,7 +1,7 @@
 Description: Change the default user the binary will run as to stunnel4
 Forwarded: not-needed
-Author: Julien Lemoine <speedblue@debian.org>,
-  Luis Rodrigo Gallardo Cruz <rodrigo@debian.org>
+Author: Julien Lemoine <speedblue@debian.org>
+Author: Luis Rodrigo Gallardo Cruz <rodrigo@debian.org>
 Last-Update: 2014-06-10
 
 --- a/tools/stunnel.conf-sample.in
