@@ -14,6 +14,8 @@ stunnel4 (3:5.04-1) UNRELEASED; urgency=low
     line numbers only.
   * Disable the autodetection of zlib in the configure script,
     it will most probably not be used at all later.
+  * Fix the DEP-3 format of the 01-fix-paths, 02-rename-binary, and
+    03-runas-user patches - use multiple "Author" headers.
 
  -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Mon, 06 Oct 2014 15:51:07 +0000
 
